cmake_minimum_required(VERSION 3.25)
project(raia_skia)

include(${PROJECT_SOURCE_DIR}/../../setting.cmake)
include_directories(${PROJECT_SOURCE_DIR}/../../../sdk/macos/arm64/include/skia)
#include_directories(${PROJECT_SOURCE_DIR}/../../../../third_party/skia/)
#include_directories(${PROJECT_SOURCE_DIR}/skia)
#include_directories(/opt/homebrew/opt)
#link_directories(/opt/homebrew/opt)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
if(APPLE)
        # macOSの場合
        set(CMAKE_INSTALL_RPATH "@loader_path")
else()
        # Linuxの場合
        set(CMAKE_INSTALL_RPATH "$ORIGIN")
endif()

#add_library(raia_skia SHARED
add_executable(raia_skia
        src/raia_skia.cpp
        src/static/static_sk_rect.cpp
        src/static/static_sk_i_rect.cpp
        src/static/static_sk_image_info.cpp
        src/static/static_sk_stream.cpp
        src/static/static_sk_image.cpp
        src/static/static_sk_data.cpp
        src/static/static_sk_shader.cpp
        src/static/static_sk_image_generator.cpp
        src/static/static_sk_mesh_child_ptr.cpp
        src/static/static_sk_blender.cpp
        src/static/static_sk_color_filter.cpp
        src/static/static_sk_color_space.cpp
        src/static/static_sk_color_table.cpp
        src/static/static_sk_image_filter.cpp
        src/static/static_sk_picture.cpp
        src/static/static_sk_pixel_ref.cpp
        src/static/static_sk_text_blob.cpp
        src/static/static_sk_typeface.cpp
        src/static/static_sk_vertices.cpp
        src/static/static_sk_capabilities.cpp
        src/static/static_sk_contour_measure.cpp
        src/static/static_sk_data_table.cpp
        src/static/static_sk_drawable.cpp
        src/static/static_sk_flattenable.cpp
        src/static/static_sk_font_mgr.cpp
        src/static/static_sk_font_style_set.cpp
        src/static/static_sk_mask_filter.cpp
        src/static/static_sk_mesh_index_buffer.cpp
        src/static/static_sk_mesh_vertex_buffer.cpp
        src/static/static_sk_path_effect.cpp
        src/static/static_sk_surface.cpp
        src/static/static_sk_canvas.cpp
        src/static/static_sk_drawable_gpu_draw_handler.cpp
        src/static/static_sk_executor.cpp
        src/static/static_sk_file_stream.cpp
        src/static/static_sk_memory_stream.cpp
        src/static/static_sk_stream_asset.cpp
        src/binding/sk_alpha_type.cpp
        src/binding/sk_alpha_type.h
        src/binding/sk_annotation.cpp
        src/binding/sk_annotation.h
        src/binding/sk_auto_canvas_restore.cpp
        src/binding/sk_auto_canvas_restore.h
        src/binding/sk_b_box_hierarchy.cpp
        src/binding/sk_b_box_hierarchy.h
        src/binding/sk_bitmap.cpp
        src/binding/sk_bitmap.h
        src/static/static_sk_pixmap.cpp
        src/static/static_sk_pixmap.h
        src/binding/sk_blender.cpp
        src/binding/sk_blender.h
        src/binding/sk_blenders.cpp
        src/binding/sk_blenders.h
        src/binding/sk_blend_mode.cpp
        src/binding/sk_blend_mode.h
        src/binding/sk_canvas.cpp
        src/binding/sk_canvas.h
        src/static/static_sk_surface_props.cpp
        src/static/static_sk_surface_props.h
        src/static/static_sk_m_44.cpp
        src/static/static_sk_m_44.h
        src/static/static_sk_matrix.cpp
        src/static/static_sk_matrix.h
        src/binding/sk_capabilities.cpp
        src/binding/sk_capabilities.h
        src/binding/sk_color.cpp
        src/binding/sk_color.h
        src/binding/sk_color_filter.cpp
        src/binding/sk_color_filter.h
        src/binding/sk_color_filters.cpp
        src/binding/sk_color_filters.h
        src/binding/sk_color_info.cpp
        src/binding/sk_color_info.h
        src/static/static_sk_color_info.cpp
        src/static/static_sk_color_info.h
        src/binding/sk_color_matrix.cpp
        src/binding/sk_color_matrix.h
        src/static/static_sk_color_matrix.cpp
        src/static/static_sk_color_matrix.h
        src/binding/sk_color_matrix_filter.cpp
        src/binding/sk_color_matrix_filter.h
        src/binding/sk_color_priv.cpp
        src/binding/sk_color_priv.h
        src/binding/sk_color_space.cpp
        src/binding/sk_color_space.h
        src/binding/sk_color_space_primaries.cpp
        src/binding/sk_color_space_primaries.h
        src/binding/sk_color_table.cpp
        src/binding/sk_color_table.h
        src/binding/sk_contour_measure.cpp
        src/binding/sk_contour_measure.h
        src/binding/sk_contour_measure_iter.cpp
        src/binding/sk_contour_measure_iter.h
        src/binding/sk_corner_path_effect.cpp
        src/binding/sk_corner_path_effect.h
        src/binding/sk_cubic_map.cpp
        src/binding/sk_cubic_map.h
        src/binding/sk_cubic_resampler.cpp
        src/binding/sk_cubic_resampler.h
        src/binding/sk_dash_path_effect.cpp
        src/binding/sk_dash_path_effect.h
        src/binding/sk_data.cpp
        src/binding/sk_data.h
        src/binding/sk_data_table.cpp
        src/binding/sk_data_table.h
        src/binding/sk_discrete_path_effect.cpp
        src/binding/sk_discrete_path_effect.h
        src/binding/sk_document.cpp
        src/binding/sk_document.h
        src/binding/sk_drawable.cpp
        src/binding/sk_drawable.h
        src/binding/sk_dynamic_memory_w_stream.cpp
        src/binding/sk_dynamic_memory_w_stream.h
        src/binding/sk_executor.cpp
        src/binding/sk_executor.h
        src/binding/sk_file_stream.cpp
        src/binding/sk_file_stream.h
        src/binding/sk_file_w_stream.cpp
        src/binding/sk_file_w_stream.h
        src/binding/sk_flattenable.cpp
        src/binding/sk_flattenable.h
        src/binding/sk_font.cpp
        src/binding/sk_font.h
        src/static/static_vector_sk_scalar.cpp
        src/static/static_vector_sk_scalar.h
        src/static/static_sk_font.cpp
        src/static/static_sk_font.h
        src/binding/sk_font_arguments.cpp
        src/binding/sk_font_arguments.h
        src/static/static_sk_font_arguments.cpp
        src/static/static_sk_font_arguments.h
        src/binding/sk_font_metrics.cpp
        src/binding/sk_font_metrics.h
        src/binding/sk_font_mgr.cpp
        src/binding/sk_font_mgr.h
        src/binding/sk_font_style.cpp
        src/binding/sk_font_style.h
        src/binding/sk_font_style_set.cpp
        src/binding/sk_font_style_set.h
        src/binding/sk_gradient_shader.cpp
        src/binding/sk_gradient_shader.h
        src/binding/sk_graphics.cpp
        src/binding/sk_graphics.h
        src/binding/sk_high_contrast_config.cpp
        src/binding/sk_high_contrast_config.h
        src/binding/sk_high_contrast_filter.cpp
        src/binding/sk_high_contrast_filter.h
        src/binding/sk_image.cpp
        src/binding/sk_image.h
        src/binding/sk_images.cpp
        src/binding/sk_images.h
        src/binding/sk_image_filter.cpp
        src/binding/sk_image_filter.h
        src/binding/sk_image_filters.cpp
        src/binding/sk_image_filters.h
        src/binding/sk_image_generator.cpp
        src/binding/sk_image_generator.h
        src/binding/sk_image_info.cpp
        src/binding/sk_image_info.h
        src/binding/sk_i_rect.cpp
        src/binding/sk_i_rect.h
        src/binding/sk_i_size.cpp
        src/binding/sk_i_size.h
        src/binding/sk_line_2d_path_effect.cpp
        src/binding/sk_line_2d_path_effect.h
        src/binding/sk_luma_color_filter.cpp
        src/binding/sk_luma_color_filter.h
        src/binding/sk_m_44.cpp
        src/binding/sk_m_44.h
        src/binding/sk_mask_filter.cpp
        src/binding/sk_mask_filter.h
        src/binding/sk_matrix.cpp
        src/binding/sk_matrix.h
        src/binding/sk_memory_stream.cpp
        src/binding/sk_memory_stream.h
        src/binding/sk_op_builder.cpp
        src/binding/sk_op_builder.h
        src/binding/sk_open_type_svg_decoder.cpp
        src/binding/sk_open_type_svg_decoder.h
        src/binding/sk_overdraw_canvas.cpp
        src/binding/sk_overdraw_canvas.h
        src/binding/sk_overdraw_color_filter.cpp
        src/binding/sk_overdraw_color_filter.h
        src/binding/sk_paint.cpp
        src/binding/sk_paint.h
        src/static/static_sk_blend_mode.cpp
        src/static/static_sk_blend_mode.h
        src/binding/sk_path.cpp
        src/binding/sk_path.h
        src/static/static_sk_path.cpp
        src/static/static_sk_path.h
        src/binding/sk_path_1d_path_effect.cpp
        src/binding/sk_path_1d_path_effect.h
        src/binding/sk_path_2d_path_effect.cpp
        src/binding/sk_path_2d_path_effect.h
        src/binding/sk_path_builder.cpp
        src/binding/sk_path_builder.h
        src/binding/sk_path_effect.cpp
        src/binding/sk_path_effect.h
        src/binding/sk_path_measure.cpp
        src/binding/sk_path_measure.h
        src/binding/sk_picture.cpp
        src/binding/sk_picture.h
        src/binding/sk_picture_recorder.cpp
        src/binding/sk_picture_recorder.h
        src/binding/sk_pixel_ref.cpp
        src/binding/sk_pixel_ref.h
        src/binding/sk_pixmap.cpp
        src/binding/sk_pixmap.h
        src/binding/sk_point_3.cpp
        src/binding/sk_point_3.h
        src/binding/sk_raster_handle_allocator.cpp
        src/binding/sk_raster_handle_allocator.h
        src/binding/sk_rect.cpp
        src/binding/sk_rect.h
        src/binding/sk_ref_cnt.cpp
        src/binding/sk_ref_cnt.h
        src/binding/sk_ref_cnt_base.cpp
        src/binding/sk_ref_cnt_base.h
        src/binding/sk_region.cpp
        src/binding/sk_region.h
        src/binding/sk_r_rect.cpp
        src/binding/sk_r_rect.h
        src/static/static_sk_string.cpp
        src/static/static_sk_string.h
        src/static/static_sk_r_rect.cpp
        src/static/static_sk_r_rect.h
        src/binding/sk_rsx_form.cpp
        src/binding/sk_rsx_form.h
        src/binding/sk_runtime_blend_builder.cpp
        src/binding/sk_runtime_blend_builder.h
        src/static/static_sk_runtime_effect_child_ptr.cpp
        src/static/static_sk_runtime_effect_child_ptr.h
        src/binding/sk_runtime_color_filter_builder.cpp
        src/binding/sk_runtime_color_filter_builder.h
        src/binding/sk_runtime_effect.cpp
        src/binding/sk_runtime_effect.h
        src/static/static_sk_runtime_effect_uniform.cpp
        src/static/static_sk_runtime_effect_uniform.h
        src/static/static_sk_runtime_effect_child.cpp
        src/static/static_sk_runtime_effect_child.h
        src/static/static_sk_runtime_effect_result.cpp
        src/static/static_sk_runtime_effect_result.h
        src/static/static_sk_runtime_effect_traced_shader.cpp
        src/static/static_sk_runtime_effect_traced_shader.h
        src/binding/sk_runtime_effect_builder.cpp
        src/binding/sk_runtime_effect_builder.h
        src/binding/sk_runtime_shader_builder.cpp
        src/binding/sk_runtime_shader_builder.h
        src/binding/sk_sampling_options.cpp
        src/binding/sk_sampling_options.h
        src/static/static_sk_sampling_options.cpp
        src/static/static_sk_sampling_options.h
        src/binding/sk_shader.cpp
        src/binding/sk_shader.h
        src/binding/sk_shader_mask_filter.cpp
        src/binding/sk_shader_mask_filter.h
        src/binding/sk_shaper.cpp
        src/binding/sk_shaper.h
        src/static/static_sk_shaper.cpp
        src/static/static_sk_shaper.h
        src/static/static_sk_shaper_font_run_iterator.cpp
        src/static/static_sk_shaper_font_run_iterator.h
        src/static/static_sk_shaper_bi_di_run_iterator.cpp
        src/static/static_sk_shaper_bi_di_run_iterator.h
        src/static/static_sk_shaper_script_run_iterator.cpp
        src/static/static_sk_shaper_script_run_iterator.h
        src/static/static_sk_shaper_language_run_iterator.cpp
        src/static/static_sk_shaper_language_run_iterator.h
        src/binding/sk_size.cpp
        src/binding/sk_size.h
        src/binding/sk_stream.cpp
        src/binding/sk_stream.h
        src/binding/sk_stream_asset.cpp
        src/binding/sk_stream_asset.h
        src/binding/sk_stream_memory.cpp
        src/binding/sk_stream_memory.h
        src/static/static_sk_stream_memory.cpp
        src/static/static_sk_stream_memory.h
        src/binding/sk_stream_rewindable.cpp
        src/binding/sk_stream_rewindable.h
        src/static/static_sk_stream_rewindable.cpp
        src/static/static_sk_stream_rewindable.h
        src/binding/sk_stream_seekable.cpp
        src/binding/sk_stream_seekable.h
        src/static/static_sk_stream_seekable.cpp
        src/static/static_sk_stream_seekable.h
        src/binding/sk_string.cpp
        src/binding/sk_string.h
        src/binding/sk_stroke_rec.cpp
        src/binding/sk_stroke_rec.h
        src/static/static_sk_stroke_rec.cpp
        src/static/static_sk_stroke_rec.h
        src/binding/sk_surface.cpp
        src/binding/sk_surface.h
        src/binding/sk_surface_props.cpp
        src/binding/sk_surface_props.h
        src/binding/sk_table_mask_filter.cpp
        src/binding/sk_table_mask_filter.h
        src/binding/sk_text_blob.cpp
        src/binding/sk_text_blob.h
        src/binding/sk_text_blob_builder.cpp
        src/binding/sk_text_blob_builder.h
        src/binding/sk_text_blob_builder_run_handler.cpp
        src/binding/sk_text_blob_builder_run_handler.h
        src/binding/sk_trace_memory_dump.cpp
        src/binding/sk_trace_memory_dump.h
        src/binding/sk_trim_path_effect.cpp
        src/binding/sk_trim_path_effect.h
        src/binding/sk_typeface.cpp
        src/binding/sk_typeface.h
        src/static/static_sk_font_style.cpp
        src/static/static_sk_font_style.h
        src/binding/sk_un_pre_multiply.cpp
        src/binding/sk_un_pre_multiply.h
        src/binding/sk_v2.cpp
        src/binding/sk_v2.h
        src/binding/sk_v3.cpp
        src/binding/sk_v3.h
        src/binding/sk_v4.cpp
        src/binding/sk_v4.h
        src/binding/sk_vertices.cpp
        src/binding/sk_vertices.h
        src/binding/sk_w_stream.cpp
        src/binding/sk_w_stream.h
        src/binding/sk_yuva_info.cpp
        src/binding/sk_yuva_info.h
        src/static/static_tuple_int_int.cpp
        src/static/static_tuple_int_int.h
        src/static/static_sk_yuva_info.cpp
        src/static/static_sk_yuva_info.h
        src/binding/sk_yuva_pixmap_info.cpp
        src/binding/sk_yuva_pixmap_info.h
        src/static/static_tuple_int_sk_yuva_pixmap_info_data_type.cpp
        src/static/static_tuple_int_sk_yuva_pixmap_info_data_type.h
        src/binding/sk_yuva_pixmaps.cpp
        src/binding/sk_yuva_pixmaps.h
        src/static/static_sk_yuva_pixmap_info.cpp
        src/static/static_sk_yuva_pixmap_info.h
        src/static/static_sk_yuva_pixmaps.cpp
        src/static/static_sk_yuva_pixmaps.h
)

# 現在のRPATH設定を取得（もしあれば）
get_property(CURRENT_RPATH TARGET raia_skia PROPERTY INSTALL_RPATH)

# 特定のディレクトリ（この場合は作成されたライブラリがあるディレクトリ）を最優先にする
list(PREPEND CURRENT_RPATH "${SPECIAL_RPATH_KEYWORD}")

# 更新されたRPATH設定をターゲットに適用
set_target_properties(raia_skia PROPERTIES
        BUILD_WITH_INSTALL_RPATH TRUE
        INSTALL_RPATH "${CURRENT_RPATH}")

target_link_libraries(raia_skia
        $<$<PLATFORM_ID:Darwin>: egl glfw.3.4 GLESv2 skia skshaper>
        $<$<PLATFORM_ID:Linux>: m dl EGL glfw GLESv2 X11 Xxf86vm Xrandr Xinerama Xcursor pthread Xi>
        $<$<PLATFORM_ID:Windows>: EGL glfw3 GLESv2>
        )

set_target_properties(raia_skia PROPERTIES PREFIX "")